# OFP-D3DX-Wrapper-Cloud

./: CMakeLists.txt  OFPD3DXWrapper.vcxproj  README.md  d3d8_bridge.cpp  d3d8_interfaces.h  d3dx.ini
.github/workflows/: build.yml
include/: config.hpp  d3d8-wrapper.hpp  d3d8to9-wrapper.hpp  d3d8to9.hpp  hooks.hpp
src/: config.cpp  d3d8.cpp  d3d8_bridge.cpp  d3d8_interfaces.h  d3d8_opengl_renderer.cpp  main.cpp
src/d3d8to9/: d3d8to9.cpp  hooks.cpp  wrapper.cpp
